--- a/app/src/main/res/layout/news_information_layout.xml
+++ b/app/src/main/res/layout/news_information_layout.xml
@@ -1,12 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:paddingBottom="10dp"
     android:paddingEnd="4dp"
     android:paddingLeft="4dp"
     android:paddingRight="4dp"
-    android:paddingStart="4dp">
+    android:paddingStart="4dp"
+    android:paddingTop="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +24,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:fontFamily="sans-serif-medium"
-            android:maxLines="2"
+            android:maxLines="4"
             android:textAllCaps="true"
             android:textColor="@color/black"
             android:textSize="22sp"
